--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
             <link rel="stylesheet" href="css/reset.css">
         </head>
         <body>
+            <p>ПАРАГРАФ ДЛЯ ПРОВЕРКИ GIT</p>
             <header class="header">
                 <div class="container">
                     <div class="row align-items-center">
